Fix page logo margin on mobile non-summary pages

--- a/resources/css/bem/wrapped.less
+++ b/resources/css/bem/wrapped.less
@@ -738,6 +738,7 @@
     // needs to be smaller for narrower screens or it might clip into username
     @media @narrow {
       height: 50px;
+      margin-left: 0;
     }
   }
 
